change cdu  URL to URI   to use custom schema like 'memory://'